syntax = "proto3";

import "google/protobuf/empty.proto";
import "constants.proto";

enum OrderStatus {
  CREATED = 0;
  PLACED = 1;
  CANCELLED = 2;
  FILLED = 3;
  COMPLETED = 4;
}

message CreateOrderRequest {
  string pay_to = 0;
  string ownerId = 1;
  string base_symbol = 2;
  string counter_symbol = 3;
  int64 base_amount = 4;
  int64 counter_amount = 5;
  Side side = 6;
}

message CreateOrderResponse {
  string order_id = 0;
  string fee_payment_request = 1;
  string deposit_payment_request = 2;
}

message PlaceOrderRequest {
  string order_id = 0;
  string deposit_refund_payment_request = 1;
  optional string fee_refund_payment_request = 2;
}

message CancelOrderRequest {
  string order_id = 0;
}

message SubscribeFillRequest {
  string order_id = 0;
}

message Fill {
  bytes swap_hash = 0;
  int64 fill_amount = 1;
}

message SubscribeFillResponse {
  OrderStatus order_status = 0;
  Fill fill = 1;
}

message ExecuteOrderRequest {
  string order_id = 0;
}

message CompleteOrderRequest {
  string order_id = 0;
  bytes swap_preimage = 1;
}

service MakerService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc PlaceOrder (PlaceOrderRequest) returns (google.protobuf.Empty);
  rpc CancelOrder (CancelOrderRequest) returns (google.protobuf.Empty);
  rpc SubscribeFill(SubscribeFillRequest) returns (stream SubscribeFillResponse);
  rpc ExecuteOrder(ExecuteOrderRequest) returns (google.protobuf.Empty);
  rpc CompleteOrder(CompleteOrderRequest) returns (google.protobuf.Empty);
}
